<resources>
    <string name="app_name">Calc</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="point">.</string>

    <string name="HZ">-/+</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dev">/</string>
    <string name="mul">*</string>
    <string name="prec">%</string>
    <string name="res">=</string>
    <string name="clear">C</string>
    <string name="image">IM</string>
    <string name="ok">OK</string>
    <string name="hint">enter img path</string>
    <string name="save_message">img saved</string>
    <string name="not_saved_message">img does not exist</string>


</resources>
